# medrag

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
scripts/: autodl_setup.sh  download_assets.sh  install_all_autodl.sh  launch_train.sh  probe_dataset_c.py  push_github.ps1  resume.sh  smoke_gpu.py
specs/001-medrag-detect-report/: autodl_runbook.md  constitution-review.md  plan.md  quickstart.md  spec.md  tasks.md
src/: __init__.py
src/config/: __init__.py  config.py  run_record.py  seed.py
src/contracts/: __init__.py  schemas.py
src/data/: __init__.py  coreset.py  ct_box.py  ct_inpaint.py  ct_label.py  dedup.py  deid.py  ingest.py  ner.py  ner_quality.py  normalize.py  qa_conflict.py  stratify.py
src/eval/: __init__.py  ablation.py  ablation_b.py  dataset.py  metrics_detection.py  metrics_e2e.py  metrics_rag.py  metrics_report.py  record.py  runner.py  stats.py
src/models/: __init__.py  fusion.py  loc_head.py  losses.py  qwen3vl.py  report.py
src/rag/: __init__.py  cascade_visual.py  chunk.py  embed_image.py  embed_text.py  index_ct.py  index_text.py  rerank.py  retrieve_text.py  store.py
src/serve/: __init__.py  mcp_server.py  pipeline.py  qa.py  stubs.py
src/train/: __init__.py
src/train/configs/: baseline_lora.yaml
tests/integration/: test_ablation.py  test_e2e_report.py  test_no_phi_egress.py  test_qa_cited.py  test_repro.py  test_skeleton.py
tests/unit/: test_ablation_b.py  test_data.py  test_deid_qa_conflict.py  test_eval.py  test_eval_harness.py  test_index_text.py  test_ingest.py  test_models.py  test_ner_quality.py  test_normalize_dedup.py  test_qa.py  test_rag.py  test_rag_text.py  test_rag_visual.py  test_report.py  test_rerank.py  test_retrieve_text.py  test_stratify_dataset.py
